# Civ1-SVE-file-edditor

./: .gitignore  CMakeLists.txt  Makefile  README.md
010 editor/: Civ1Script.1sc  Civ1Template.bt
res/: resources.qrc
save_files/: CIVIL0.SVE
src/: CMakeLists.txt  SVE_file_edditor.cpp  SVE_file_edditor.hpp  file_reader.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sve_format.hpp  utill.cpp  utill.hpp
